--- a/views/chefs/detail/detail.ejs
+++ b/views/chefs/detail/detail.ejs
@@ -12,22 +12,11 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="../../../public/chefs/navbar/navbar.css" />
     <link rel="stylesheet" href="../../../public/chefs/content/detail.css" />
     <title>Hello, world!</title>
   </head>
   <body>
-    <nav class="navbar navbar-light bg-primary">
-      <div class="container-fluid">
-        <a class="navbar-icon" href="/">Partner Chefs</a>
-      </div>
-    </nav>
+    <%- include('../../partial/navbar') %>
 
     <div class="container container-detail">
       <h1>List Chefs</h1>
