--- a/views/chefs/list/list.ejs
+++ b/views/chefs/list/list.ejs
@@ -12,23 +12,12 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="../../../public/chefs/navbar/navbar.css" />
     <link rel="stylesheet" href="../../../public/chefs/content/content.css" />
 
     <title>List Chefs</title>
   </head>
   <body>
-    <nav class="navbar navbar-light bg-primary">
-      <div class="container-fluid">
-        <a class="navbar-icon" href="/">Partner Chefs</a>
-      </div>
-    </nav>
+    <%- include('../../partial/navbar') %>
     <div class="container container-set">
       <h1 class="h1-list">List Chefs</h1>
       <a href="/chefs/detail" class="btn btn-primary mt-3">Chefs List</a>
