width serch form

--- a/views/recipes/list/list.ejs
+++ b/views/recipes/list/list.ejs
@@ -22,7 +22,7 @@
       <h1>List Recipe</h1>
       <a href="/recipes/add" class="btn btn-primary mt-3">Add New Recipe</a>
       <form action="/recipes" method="get">
-        <div class="input-group mb-3 mt-4 search">
+        <div class="input-group mb-3 mt-4 search w-50">
           <input
             type="text"
             class="form-control"
